--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "body-parser": "^1.19.0",
     "bootstrap": "^4.5.2",
     "cors": "^2.8.5",
+    "dompurify": "^2.1.1",
     "express": "^4.17.1",
+    "marked": "^1.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
