--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dompurify": "^2.1.1",
     "express": "^4.17.1",
     "marked": "^1.2.0",
+    "moment": "^2.29.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
