--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "body-parser": "^1.19.0",
     "bootstrap": "^4.5.2",
     "cors": "^2.8.5",
+    "date-fns": "^2.16.1",
+    "dayjs": "^1.9.5",
     "dompurify": "^2.1.1",
     "express": "^4.17.1",
     "marked": "^1.2.0",
