--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "moment": "^2.29.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-player": "^2.7.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "video-react": "^0.14.1"
   },
   "scripts": {
     "start": "react-scripts start",
