--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dayjs": "^1.9.5",
     "dompurify": "^2.1.1",
     "express": "^4.17.1",
+    "lodash": "^4.17.20",
     "marked": "^1.2.0",
     "moment": "^2.29.1",
     "player.js": "^0.1.0",
