fixed flexbox styling on comments

--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
     "lodash": "^4.17.20",
     "marked": "^1.2.0",
     "moment": "^2.29.1",
+    "node-sass": "^4.14.1",
     "player.js": "^0.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-player": "^2.7.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3",
+    "react-scripts": "4.0.1",
     "video-react": "^0.14.1"
   },
   "scripts": {
