--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-player": "^2.7.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-toastify": "^6.2.0",
     "video-react": "^0.14.1"
   },
   "scripts": {
