--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "player.js": "^0.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-iframe": "^1.8.0",
     "react-player": "^2.7.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
