--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-toastify": "^6.2.0",
+    "react-twitter-widgets": "^1.9.5",
     "video-react": "^0.14.1"
   },
   "scripts": {
