changed env variable names

--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
 REACT_APP_REDIRECT='https://stormy-plains-06598.herokuapp.com/authorize'
-REACT_APP_CLIENT_ID='MMej7E1hI1x82A'
+REACT_APP_CLIENT_ID='eRc-Hrhs40g9Kw'
